--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-
+  <link rel="icon" href="./icon.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>TTT</title>
 </head>
 
 <body>
